Add new schema for deletes and updates
Signed-off-by: Andre Kurait <akurait@amazon.com>